# spam-analyzer

./: .coveragerc  .coveralls.yml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  config.yaml  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  spam-detector.py
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: ci-mkdocs.yml  docs.yml  python-publish.yml  test.yml
SECURITY/: index.html
api/: index.html
api/reference/: index.html  reference.md
api/utils/: index.html  utils.md
app/: __init__.py  cli.py  costants.py
app/lib/: data_structures.py  utils.py
assets/: weights.yaml  word_blacklist.txt
changelog/: changelog.md  index.html
conf/: config.yaml
contrib/CODE_OF_CONDUCT/: index.html
contrib/contributing/: contributing.md  index.html
data/: 03.e703103ecc9c81a73a464b606c416f3b72583396325dd014557ff2b33ee0c087  26.cef0ea85194deb2977506c18bddbb08e6fdae4d01144f876a9d9dd0781831d41  48.a63991ad9e759c57337c2cb9c3e5c6a155a24ab187d3c06334752c5b16f1c7e5  88.9f400a6fa88247a6e8ed4c316e6b17cb7a3ac69771b71daa1500d199129fd891
data_analysis/: index.html  index.md
data_analysis/SpamAnalysis/: index.html
docs/: CNAME  SECURITY.md  SpamAnalysis.ipynb  api_reference.md  changelog.md  classification.md  getting_started.md  index.md  installation.md  performance.md  requirements.md  testing.md  usage.md
docs/data/: spam.csv
docs/data_analysis/: SpamAnalysis.ipynb
examples/: analyzer.py  generate_a_dataset.py  plugin.py
getting_started/: getting_started.md  index.html
installation/: index.html  installation.md
requirements/: index.html  requirements.md
search/: search_index.json
spamanalyzer/: __init__.py  display.py  files.py
spamanalyzer/analyzer/: __init__.py  classifier.py  data_structures.py  utils.py
spamanalyzer/cli/: __init__.py  parser.py  run.py
spamdetector/: __init__.py  cli.py  display.py  files.py
spamdetector/analyzer/: __init__.py  classifier.py  data_structures.py  utils.py
spamdetector/cli/: __init__.py  parser.py  run.py
spamdetector/lib/: data_structures.py  utils.py
src/: __init__.py  files.py
src/analyzer/: data_structures.py  utils.py
src/app/: __analyzer.py  __main__.py  files.py  io.py  parser.py
src/app/conf/: config.yaml
src/cli/: parser.py  run.py
src/spamanalyzer/: __init__.py  classifier.py  data_structures.py  date.py  domain.py  errors.py  plugins.py  utils.py
src/spamanalyzer/ml/: __classifier.py  __init__.py
testing/: index.html  testing.md
tests/: conftest.py  test_analyzer_data_structures.py  test_analyzer_utils.py  test_cli.py  test_file.py  test_lib_utils.py
tests/app/: test_cli.py  test_files.py
tests/cli/: test_cli.py  test_files.py
tests/samples/: 37.0a20203f8e8cf2a5193c6a4f1264d047d1d38dbfcfb1526ca530c71e8a9c322c.email  47.6e6cb9cfd6f60fa415b04d0d1200a4b3cd648344f0a286cf8c0a2f8b1fc1d5fb.email  51.c720925fd15256262c58efdd29c1c7c15adffdd5a31a8d708349866a73b6c29d.email  63.eedb2d44c343398cf26281d6db6340559bb93bf941809a0ad9b92096849ce42e.email  94.e14f26e73a75c36ff261fd0ae700691e447d87113bb460273b3f3e5a189b0ddf.email  97.47949e45691dd7a024dcfaacef4831461bf5d5f09c85a6e44ee478a5bcaf8539.email  invalid_file.txt  none_date.email  none_subject.email
tests/spamanalyzer/: test_analyzer_data_structures.py  test_analyzer_utils.py  test_data_structures.py  test_date.py  test_domain.py  test_utils.py
usage/: index.html  usage.md
